[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "embdevtools"
version = "0.0.1"
description = "A small example package"
authors = [
  { name = "Example Author", email = "author@example.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "cellpose>=2",
    "stardist==0.8.3",
    "matplotlib",
    "tensorflow==2.12.0",
    "numpy>=1.22",
    "scikit-learn",
    "scipy",
    "tifffile",
    "opencv-python==4.6.*",
    "munkres==1.1.4",
    "scikit-image==0.19.2",
]

[project.urls]
"Homepage" = "https://github.com/dsb-lab/embdevtools"
"Bug Tracker" = "https://github.com/dsb-lab/embdevtools/issues"
